@@ -1,3 +1,15 @@
+2022-02-24  Alan Bujtas  <zalan@apple.com>
+
+        [IFC][Integration] verticalLogicalMargin returns incorrect values for vertical-rl
+        https://bugs.webkit.org/show_bug.cgi?id=237138
+
+        Reviewed by Antti Koivisto.
+
+        This was caused by an accidental copy/paste.
+
+        * layout/integration/LayoutIntegrationLineLayout.cpp:
+        (WebCore::LayoutIntegration::verticalLogicalMargin): also switch over to "switch".
+
 2022-02-24  Devin Rousso  <drousso@apple.com>
 
         [Apple Pay] switch from `PassKit/*` to `PassKit[Core,UI]/*`
